--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>RupertG Radio - Live Streaming</title>
     <meta name="description" content="RupertG Radio - Your trusted source for quality entertainment, information, and community connection. Live streaming 24/7.">
     <meta name="keywords" content="radio, music, news, business, live stream, RupertG Radio">
-    <link rel="icon" href="/favicon.png" type="image/png">
+    <link rel="icon" href="/assets/favicon.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -156,3 +156,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
