--- a/app.html
+++ b/app.html
@@ -105,19 +105,15 @@
                     <div class="download-stats">
                         <div class="stat-item">
                             <span class="stat-label">Version:</span>
-                            <span class="stat-value">2.1.0</span>
+                            <span class="stat-value">1.0</span>
                         </div>
                         <div class="stat-item">
                             <span class="stat-label">Size:</span>
-                            <span class="stat-value">15.2 MB</span>
+                            <span class="stat-value">5.59 MB</span>
                         </div>
                         <div class="stat-item">
                             <span class="stat-label">Android:</span>
                             <span class="stat-value">5.0+</span>
-                        </div>
-                        <div class="stat-item">
-                            <span class="stat-label">Downloads:</span>
-                            <span class="stat-value">10,000+</span>
                         </div>
                     </div>
                     <div class="download-description">
@@ -134,7 +130,7 @@
                     <div class="download-card">
                         <div class="app-icon">📻</div>
                         <h3>RupertG Radio</h3>
-                        <p class="app-version">Version 2.1.0</p>
+                        <p class="app-version">Version 1.0</p>
                         <div class="download-button-container">
                             <a href="/assets/rupertgradio.apk" class="download-button" download>
                                 <span class="download-icon">⬇️</span>
@@ -235,11 +231,7 @@
                 <div class="contact-info">
                     <div class="contact-item">
                         <span class="contact-label">Email:</span>
-                        <a href="mailto:app@rupertg.co.uk">app@rupertg.co.uk</a>
-                    </div>
-                    <div class="contact-item">
-                        <span class="contact-label">Version:</span>
-                        <span>2.1.0</span>
+                        <a href="mailto:contact@rupertg.co.uk">contact@rupertg.co.uk</a>
                     </div>
                     <div class="contact-item">
                         <span class="contact-label">Last Updated:</span>
